# litesqrl

./: .gitattributes  .gitignore  .prettierrc  Cargo.toml  README.md  eslint.config.js  package.json  rustfmt.toml
app/tauri/: Cargo.toml  tauri.conf.json
app/tauri/src/: ai.rs  lib.rs  main.rs
app/tauri/src/ai/: client.rs  mod.rs  tools.rs
app/ui/: package.json  tsconfig.json  vite.config.ts
app/ui/src/: app.css  app.html
app/ui/src/lib/: QueryEditor.svelte  ai.ts  markdown.ts
app/ui/src/lib/result/: QueryCountResult.svelte  QueryErrorResult.svelte  QueryRowsResult.svelte  QuerySuccessResult.svelte
app/ui/src/routes/: +page.svelte
apps/tauri/src/: lib.rs
apps/ui/: package.json
apps/ui/src/: ace-builds.d.ts
apps/ui/src/lib/: QueryEditor.svelte  QueryRowsResult.svelte
apps/ui/src/routes/: +page.svelte
common/: Cargo.toml
common/src/: lib.rs
common/src/executor/: mod.rs
common/src/query/: error.rs  lexer.rs  mod.rs  parser.rs
common/src/schema/: mod.rs
common/src/storage/: codec.rs  error.rs  header.rs  meta.rs  mod.rs  record.rs  types.rs
lib/: Cargo.toml
lib/src/executor/: mod.rs
lib/src/query/: lexer.rs  mod.rs  parser.rs  span.rs
lib/src/schema/: mod.rs
lib/src/storage/: error.rs  header.rs  mod.rs  record.rs  state.rs
src/: main.rs  var_char.rs
src/executor/: mod.rs
src/gui/: mod.rs
src/query/: parser.rs
src/storage/: mod.rs
