[package]
name = "runtime"
version = "0.0.1"
edition = "2024"

[lib]
name = "runtimelib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
litesqrl = { path = "../../lib" }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
